--- a/css/root.css
+++ b/css/root.css
@@ -25,6 +25,8 @@ html::-webkit-scrollbar-track {
 
 main {
     display: flex;
+
+    min-height: 100vh;
     width: 100%;
     height: 100%;
 }
